// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Rating component > should handle mouseenter and mouseleave events 1`] = `
<div>
  <rating
    class="flex cursor-pointer select-none"
    role="radiogroup"
    tabindex="0"
  >
    <!---->
     
    <icon
      aria-checked="true"
      aria-label="Rating 1 out of 5"
      class="flex flex-shrink-0 items-center justify-center hovering"
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-filled"
      />
    </icon>
    <icon
      aria-checked="true"
      aria-label="Rating 2 out of 5"
      class="flex flex-shrink-0 items-center justify-center hovering"
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-filled"
      />
    </icon>
    <icon
      aria-checked="false"
      aria-label="Rating 3 out of 5"
      class="flex flex-shrink-0 items-center justify-center hovering"
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </icon>
    <icon
      aria-checked="false"
      aria-label="Rating 4 out of 5"
      class="flex flex-shrink-0 items-center justify-center hovering"
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </icon>
    <icon
      aria-checked="false"
      aria-label="Rating 5 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </icon>
    <!---->
  </rating>
  
</div>
`;

exports[`Rating component > should not handle mouseenter and mouseleave events when disabled 1`] = `
<div>
  <rating
    class="flex cursor-pointer select-none disabled"
    role="radiogroup"
    tabindex="0"
  >
    <!---->
     
    <icon
      aria-checked="true"
      aria-label="Rating 1 out of 5"
      class="flex flex-shrink-0 items-center justify-center disabled"
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-filled"
      />
    </icon>
    <icon
      aria-checked="true"
      aria-label="Rating 2 out of 5"
      class="flex flex-shrink-0 items-center justify-center disabled"
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-filled"
      />
    </icon>
    <icon
      aria-checked="false"
      aria-label="Rating 3 out of 5"
      class="flex flex-shrink-0 items-center justify-center disabled"
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </icon>
    <icon
      aria-checked="false"
      aria-label="Rating 4 out of 5"
      class="flex flex-shrink-0 items-center justify-center disabled"
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </icon>
    <icon
      aria-checked="false"
      aria-label="Rating 5 out of 5"
      class="flex flex-shrink-0 items-center justify-center disabled"
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </icon>
    <!---->
  </rating>
  
</div>
`;

exports[`Rating component > should render the correct number of stars 1`] = `
<div>
  <rating
    class="flex cursor-pointer select-none"
    role="radiogroup"
    tabindex="0"
  >
    <!---->
     
    <icon
      aria-checked="false"
      aria-label="Rating 1 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </icon>
    <icon
      aria-checked="false"
      aria-label="Rating 2 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </icon>
    <icon
      aria-checked="false"
      aria-label="Rating 3 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </icon>
    <icon
      aria-checked="false"
      aria-label="Rating 4 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </icon>
    <icon
      aria-checked="false"
      aria-label="Rating 5 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </icon>
    <!---->
  </rating>
  
</div>
`;

exports[`Rating component > should reset the value to zero 1`] = `
<div>
  <rating
    class="flex cursor-pointer select-none"
    role="radiogroup"
    tabindex="0"
  >
    <input
      hidden=""
      max="5"
      min="0"
      name="rating"
      type="number"
    />
    <!---->
     
    <icon
      aria-checked="false"
      aria-label="Rating 1 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </icon>
    <icon
      aria-checked="false"
      aria-label="Rating 2 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </icon>
    <icon
      aria-checked="false"
      aria-label="Rating 3 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </icon>
    <icon
      aria-checked="false"
      aria-label="Rating 4 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </icon>
    <icon
      aria-checked="false"
      aria-label="Rating 5 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </icon>
    <!---->
  </rating>
  
</div>
`;

exports[`Rating component > should select the correct number of stars when value changes 1`] = `
<div>
  <rating
    class="flex cursor-pointer select-none"
    role="radiogroup"
    tabindex="0"
  >
    <!---->
     
    <icon
      aria-checked="true"
      aria-label="Rating 1 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-filled"
      />
    </icon>
    <icon
      aria-checked="true"
      aria-label="Rating 2 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-filled"
      />
    </icon>
    <icon
      aria-checked="true"
      aria-label="Rating 3 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-filled"
      />
    </icon>
    <icon
      aria-checked="true"
      aria-label="Rating 4 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-filled"
      />
    </icon>
    <icon
      aria-checked="false"
      aria-label="Rating 5 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </icon>
    <!---->
  </rating>
  
</div>
`;

exports[`Rating component > should update value on click when not disabled 1`] = `
<div>
  <rating
    class="flex cursor-pointer select-none"
    role="radiogroup"
    tabindex="0"
  >
    <input
      hidden=""
      max="5"
      min="0"
      name="rating"
      type="number"
    />
    <!---->
     
    <icon
      aria-checked="true"
      aria-label="Rating 1 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-filled"
      />
    </icon>
    <icon
      aria-checked="true"
      aria-label="Rating 2 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-filled"
      />
    </icon>
    <icon
      aria-checked="true"
      aria-label="Rating 3 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-filled"
      />
    </icon>
    <icon
      aria-checked="true"
      aria-label="Rating 4 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-filled"
      />
    </icon>
    <icon
      aria-checked="false"
      aria-label="Rating 5 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </icon>
    <!---->
  </rating>
  
</div>
`;
